fixed word wrap for the article body

--- a/plugins/comment_paragraph/public/style.css
+++ b/plugins/comment_paragraph/public/style.css
@@ -46,6 +46,8 @@ div.article-comments-list-more{
 
 .article-body{
   word-wrap: break-word;
+  display: inline-block;
+  word-break: break-all;
 }
 
 .triangle-right {
